--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <div class="pokedex-main-header">
                         <h2>Name: <span class="pokemon-name"></span></h2>
                     </div>
-                    <div class="pokdex-main-info">
+                    <div class="pokedex-main-info">
                         <h3>Height: <span class="ability-height"></span></h3>
                         <h3>Weight: <span class="ability-weight"></span></h3>
                         <h3>Abilities: </h3>
